feat: add spatial officer command center
